--- a/mcudle/app/components/movieFeedback.module.css
+++ b/mcudle/app/components/movieFeedback.module.css
@@ -4,18 +4,17 @@
     width: 100%;
     max-width: 800px;
     margin: 10px 0;
-    border: 1px dashed #ddd; /* This sets the default border style for the row */
+    border: 1px dashed #ddd;
   }
   
   .feedbackCell {
     flex: 1;
     text-align: center;
     padding: 10px;
-    border-left: 1px solid #ddd; /* Dividing lines within each row */
-    border-right: 1px solid #ddd; /* Dividing lines within each row */
+    border-left: 1px solid #FF8A00;
+    border-right: 1px solid #FF8A00;
   }
   
-  /* Remove the left border for the first cell and right border for the last cell */
   .feedbackCell:first-child {
     border-left: none;
   }
@@ -23,4 +22,3 @@
   .feedbackCell:last-child {
     border-right: none;
   }
-  
