--- a/mcudle/app/page.module.css
+++ b/mcudle/app/page.module.css
@@ -81,9 +81,11 @@
   .headerImage {
     width: 60px;
     height: 60px;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease, transform 0.3s ease;
   }
 
   .headerImage:hover {
     opacity: 0.5;
+    transform: scale(1.1);
   }
+  
